--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   riverpod_annotation: ^2.6.1
   flutter_animate: ^4.5.2
   image_picker: ^1.1.2
+  transparent_image: ^2.0.1
+  location: ^8.0.1
 
 dev_dependencies:
   flutter_test:
